// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser component should render with button disabled 1`] = `
<div>
  <div>
    <TextInput
      id="name"
      label="Name"
      onChange={[Function]}
      value=""
    />
    <TextInput
      autoCorrect={false}
      id="email"
      isInvalid={false}
      label="Email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value=""
    />
    <CheckboxButton
      checked={false}
      label="Doctor"
      onChange={[Function]}
      value="isDoctor"
    />
    <CheckboxButton
      checked={false}
      label="Specialist"
      onChange={[Function]}
      value="isSpecialist"
    />
  </div>
  <div>
    <Button
      disabled={true}
      onClick={[Function]}
    >
      Add User
    </Button>
  </div>
</div>
`;

exports[`AddUser component should render with button enabled 1`] = `
<div>
  <div>
    <TextInput
      id="name"
      label="Name"
      onChange={[Function]}
      value="Marty McFly"
    />
    <TextInput
      autoCorrect={false}
      id="email"
      isInvalid={false}
      label="Email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      value="marty@mcfly.com"
    />
    <CheckboxButton
      checked={false}
      label="Doctor"
      onChange={[Function]}
      value="isDoctor"
    />
    <CheckboxButton
      checked={false}
      label="Specialist"
      onChange={[Function]}
      value="isSpecialist"
    />
  </div>
  <div>
    <Button
      disabled={false}
      onClick={[Function]}
    >
      Add User
    </Button>
  </div>
</div>
`;
